--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,10 @@ dependencies {
     //firebase storage
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-storage'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //pull-to-refresh layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
