Added code for mapping episodes to shows and basic implementation of live data in home fragment.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
 
     //firebase database
     implementation 'com.google.firebase:firebase-database'
+
+    //live-data
+    // ViewModel and lifecycle support for java
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
 }
