--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -83,4 +85,22 @@ dependencies {
     // ViewModel and lifecycle support for java
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
+
+    // dependency for exoplayer
+    implementation "com.google.android.exoplayer:exoplayer:2.14.1"
+
+    // for core support in exoplayer.
+    implementation "com.google.android.exoplayer:exoplayer-core:2.14.1"
+
+    // for adding dash support in our exoplayer.
+    implementation "com.google.android.exoplayer:exoplayer-dash:2.14.1"
+
+    // for adding hls support in exoplayer.
+    implementation "com.google.android.exoplayer:exoplayer-hls:2.14.1"
+
+    // for smooth streaming of video in our exoplayer.
+    implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:2.14.1"
+
+    // for generating default ui of exoplayer
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.14.1"
 }
