--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,12 @@ dependencies {
 
     // for generating default ui of exoplayer
     implementation "com.google.android.exoplayer:exoplayer-ui:2.14.1"
+
+    //carousel-view
+    implementation "com.github.smarteist:autoimageslider:1.3.9"
+
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
