--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".account.NewUserForm"></activity>
         <activity android:name=".account.SignUp" />
         <activity android:name=".account.Login" />
+        <activity android:name=".ui.description.DescriptionFragment"/>
+        <activity android:name=".ui.videoview.VideoFragment"/>
+        <activity android:name=".ui.movie_description.MovieDescriptionFragment"/>
         <activity
             android:name=".NavigationActivity"
             android:label="@string/title_activity_navigation"
